--- a/careers.html
+++ b/careers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +12,17 @@
     <link rel="icon" href="./images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <script src="./js/main.js"></script>
 </head>
+
 <body>
     <header class="header">
         <a href="#" class="logo"><img src="./images/favicon.png" alt=""></a>
@@ -45,52 +49,52 @@
         <h1 class="heading">Career</h1>
         <p>Job Opening in IT Company. Apply Now!</p>
     </section>
+
     <div class="career">
         <div class="career-form">
-            <form action="./careers.php" method="POST" enctype="multipart/form-data">
-                <input type="text" name="name" placeholder="Name" class="career-form-txt" required>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number" maxlength="10" class="career-form-phone">
+            <form id="careerForm">
+                <input type="text" name="full_name" placeholder="Full Name" class="career-form-txt" required>
                 <input type="email" name="email" placeholder="Email" class="career-form-email" required>
+                <input type="tel" name="phone" pattern="[0-9]{10}" required placeholder="Contact Number" maxlength="10"
+                    class="career-form-phone">
+
                 <div class="radio-class">
-                    <h2 class="name">Apply For Which Post?</h2>
-                <label class="radio">
-                  <input class="radio-one" type="radio" checked="checked" name="status" value="Web Designer">
-                  <span class="checkmark"></span>
-                  Web Designer
-                </label>
-                <label class="radio">
-                  <input class="radio-two" type="radio" name="status" value="Web Developer">
-                  <span class="checkmark"></span>
-                  Web Developer
-                </label>
-                <label class="radio">
-                  <input class="radio-three" type="radio" name="status" value="Mobile App Designer">
-                  <span class="checkmark"></span>
-                  Mobile App Designer
-                </label>
-                <label class="radio">
-                    <input class="radio-four" type="radio" name="status" value="Mobile App Developer">
-                    <span class="checkmark"></span>
-                    Mobile App Developer
-                  </label>
-                <label class="radio">
-                  <input class="radio-five" type="radio"  name="status" value="Digital Marketer">
-                  <span class="checkmark"></span>
-                  Digital Marketer
-                </label>
+                    <h2 class="name">Select Position</h2>
+                    <label class="radio">
+                        <input type="radio" name="position" value="Web Designer" checked>
+                        <span class="checkmark"></span>
+                        Web Designer
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="position" value="Web Developer">
+                        <span class="checkmark"></span>
+                        Web Developer
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="position" value="Mobile App Developer">
+                        <span class="checkmark"></span>
+                        Mobile App Developer
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="position" value="Digital Marketer">
+                        <span class="checkmark"></span>
+                        Digital Marketer
+                    </label>
                 </div>
-                <input type="number" id="experience" name="experience" required placeholder="Years of Experience" class="career-form-experience">
-                <textarea placeholder="Other Details" name="details" class="career-form-txtarea" required></textarea>
-                <div class="file">
-                    <h2 class="name">Upload Your Resume</h2>
-                    <input class="upload" type="file" name="fileToUpload" accept=".doc,.docx,.pdf"><br><br><br>
-                </div>
-                <input type="submit" value="Submit" name="submit" class="career-form-btn">
+
+                <input type="number" name="experience" required placeholder="Years of Experience"
+                    class="career-form-experience" min="0">
+                <input type="url" name="resume_url" placeholder="Resume URL (Google Drive, Dropbox, etc.)"
+                    class="career-form-txt" required>
+                <textarea name="cover_letter" placeholder="Cover Letter" class="career-form-txtarea"
+                    required></textarea>
+
+                <input type="submit" value="Submit" class="career-form-btn">
             </form>
         </div>
     </div>
 
-      <div class="footer">
+    <div class="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
@@ -100,11 +104,12 @@
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#home">Home</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#about">About us</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#service">Our services</a></li>
-                            <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#home">Terms & condition</a></li>
+                            <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#home">Terms & condition</a>
+                            </li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#home">Privacy policy</a></li>
                         </ul>
                     </div>
-  
+
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
@@ -115,42 +120,48 @@
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#faq">FAQ</a></li>
                         </ul>
                     </div>
-  
+
                     <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem;">
                         <h4>Contact Us</h4>
                         <p>
                             Opposite Punjab&Sind bank,Banga Road <br>Garhshankar
-                             <br>District-Hoshiarpur,Pincode-144527
-                             <br>State-Punjab
-                             <strong>Phone:</strong> +91 6280232717, +91 7087383637<br>
-                             <strong>Email:</strong>cybertreeindia001@gmail.com <br>
-                         </p>
-  
+                            <br>District-Hoshiarpur,Pincode-144527
+                            <br>State-Punjab
+                            <strong>Phone:</strong> +91 6280232717, +91 7087383637<br>
+                            <strong>Email:</strong>cybertreeindia001@gmail.com <br>
+                        </p>
+
                         <div class="social-links">
-                            <a href="https://www.facebook.com/profile.php?id=61571741733977&mibextid=ZbWKwL"><i class="ion-logo-facebook"></i></a>
-                          <a href="https://x.com/Cybertree_"><i class="ion-logo-twitter"></i></a>
-                          <a href="https://www.linkedin.com/https://in.linkedin.com/in/cyber-tree-374275346"><i class="ion-logo-linkedin"></i></a>
-                          <a href="https://www.instagram.com/cybertreeind?igsh=aXoycDk4OWJ1dTBp"><i class="ion-logo-instagram"></i></a>
-                          <a href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="ion-logo-googleplus"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61571741733977&mibextid=ZbWKwL"><i
+                                    class="ion-logo-facebook"></i></a>
+                            <a href="https://x.com/Cybertree_"><i class="ion-logo-twitter"></i></a>
+                            <a href="https://www.linkedin.com/https://in.linkedin.com/in/cyber-tree-374275346"><i
+                                    class="ion-logo-linkedin"></i></a>
+                            <a href="https://www.instagram.com/cybertreeind?igsh=aXoycDk4OWJ1dTBp"><i
+                                    class="ion-logo-instagram"></i></a>
+                            <a
+                                href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i
+                                    class="ion-logo-googleplus"></i></a>
                         </div>
                     </div>
-  
+
                     <div class="col-lg-3 col-md-6 footer-newsletter">
                         <h4>Subscription</h4>
-                        <p>With Our Skills Put Together, You Get An Ensemble Capable Of Doing Anything And Everything Your Brand Needs. Subscribe Here To Get Our Latest Updates.</p>
+                        <p>With Our Skills Put Together, You Get An Ensemble Capable Of Doing Anything And Everything
+                            Your Brand Needs. Subscribe Here To Get Our Latest Updates.</p>
                         <form action="" method="post">
-                            <input type="email" name="email"><input type="submit"  value="Subscribe">
+                            <input type="email" name="email"><input type="submit" value="Subscribe">
                         </form>
                     </div>
-  
+
                 </div>
             </div>
         </div>
-  
+
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                    Copyright &copy; 2025 CyberTree-India. All Rights Reserved.      
+                    Copyright &copy; 2025 CyberTree-India. All Rights Reserved.
                 </div>
             </div>
         </div>
@@ -167,5 +178,73 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
+    <!-- Modal -->
+    <div class="modal" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="successModalLabel">Application Submitted</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Your application has been submitted successfully!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script>
+        document.getElementById('careerForm').addEventListener('submit', async function (e) {
+            e.preventDefault();
+
+            const formData = new FormData(this);
+
+            // Prepare the application data
+            const applicationData = {
+                full_name: formData.get('full_name'),
+                email: formData.get('email'),
+                phone: formData.get('phone'),
+                position: formData.get('position'),
+                experience: parseInt(formData.get('experience')),
+                resume_url: formData.get('resume_url'),
+                cover_letter: formData.get('cover_letter')
+            };
+
+            try {
+                // Submit the application
+                const response = await fetch('http://127.0.0.1:8000/api/jobs/apply/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(applicationData)
+                });
+
+                if (!response.ok) {
+                    throw new Error('Application submission failed');
+                }
+
+                // Show success modal
+                $('#successModal').modal('show');
+
+                // Reset form
+                this.reset();
+
+            } catch (error) {
+                console.error('Error:', error);
+                alert('Error submitting application: ' + error.message);
+            }
+        });
+
+    </script>
+
 </body>
+
 </html>
