--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
             // Send data to API using Fetch API
             try {
-                const response = await fetch('http://127.0.0.1:8000/api/contact/', {
+                const response = await fetch('https://cybertree.pythonanywhere.com/api/contact/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
