--- a/careers.html
+++ b/careers.html
@@ -219,7 +219,7 @@
 
             try {
                 // Submit the application
-                const response = await fetch('http://127.0.0.1:8000/api/jobs/apply/', {
+                const response = await fetch('https://cybertree.pythonanywhere.com/api/jobs/apply/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
